--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -10,7 +10,6 @@
 			.slider{
 				position: relative;
 				overflow: hidden;
-				height: 150px;
 				margin:0 auto 10px;
 			}
 			.slider .prev,.slider .next{
@@ -45,7 +44,8 @@
 				width:24px;
 				height:24px;
 				background: #ccc;
-				margin-right:5px;
+				margin:0 2px;
+				line-height: 24px;
 				cursor: pointer;
 			}
 			.slider .nav li.active{background:#ff0;}
