--- a/index.html
+++ b/index.html
@@ -297,5 +297,6 @@
 			  s.parentNode.insertBefore(hm, s);
 			})();
 		</script>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 	</body>
 </html>
