--- a/zepto-slider/index.html
+++ b/zepto-slider/index.html
@@ -144,8 +144,8 @@
 							<td>导航选中时的class</td>
 						</tr>
 						<tr>
-							<td>disableBtnCls</td>
-							<td>disable</td>
+							<td>disabledBtnCls</td>
+							<td>disabled</td>
 							<td>按键不可用时的class</td>
 						</tr>
 						<tr>
