--- a/index.html
+++ b/index.html
@@ -264,6 +264,12 @@
 							</li>
 							<li>
 								<div class="item">
+									<p><a href="/jquery-tableselect/" target="_blank">表格单元格操作</a></p>
+									<p>$(selector).tableselect(options,callback(api));</p>
+								</div>
+							</li>
+							<li>
+								<div class="item">
 									<p><a href="/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
 									<p>$(selector).inputFormat(options,callback(api));</p>
 								</div>
