--- a/jquery-tableselect/index.html
+++ b/jquery-tableselect/index.html
@@ -38,7 +38,7 @@
 			}
 		</style>
 		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
-		<script type="text/javascript" src="/code/jquery.tableselect.js?v=20201016"></script>
+		<script type="text/javascript" src="/code/jquery.tableselect.js?v=20230418"></script>
 	</head>
 	<body>
 		<div class="header">
@@ -76,125 +76,125 @@
 					<tbody>
 						<tr>
 							<td class="th disabled"><span>8:00-9:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>9:00-10:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td colspan="3"><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td colspan="3"></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>10:00-11:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>11:00-12:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td rowspan="2"><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td rowspan="2"></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>12:00-13:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th"><span>13:00-14:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td rowspan="3" colspan="2"><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td><span>内容测试</span></td>
+							<td></td>
+							<td rowspan="3" colspan="2"></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>14:00-15:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>15:00-16:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>16:00-17:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<td class="th disabled"><span>17:00-18:00</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
-							<td><span>&nbsp;</span></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
 						</tr>
 					</tbody>
 				</table>
@@ -204,7 +204,8 @@
 				</p>
 			</div>
 			<div class="code">
-<pre>var _range = null;
+<pre>
+	var _range = null;
 	$(".demo table").tableselect({
 		'onSelectEnd':function(range){
 			_range = range;
@@ -216,18 +217,21 @@
 		$('#mergeCells').on('click',function(){
 			if(_range){
 				api.mergeCells(_range,function($item){
-					$item.removeClass('selected').html('<span>&nbsp;</span>');
+					$item.removeClass('selected');
 				});
+				_range = null;
 			}
 		});
 		$('#splitCells').on('click',function(){
 			if(_range){
 				api.splitCells(_range,function($item){
-					$item.removeClass('selected').html('<span>&nbsp;</span>');
+					$item.removeClass('selected');
 				});
+				_range = null;
 			}
 		});
-	});</pre>
+	});
+</pre>
 			</div>
 			<script type="text/javascript">
 				var _range = null;
@@ -242,15 +246,17 @@
 					$('#mergeCells').on('click',function(){
 						if(_range){
 							api.mergeCells(_range,function($item){
-								$item.removeClass('selected').html('<span>&nbsp;</span>');
+								$item.removeClass('selected');
 							});
+							_range = null;
 						}
 					});
 					$('#splitCells').on('click',function(){
 						if(_range){
 							api.splitCells(_range,function($item){
-								$item.removeClass('selected').html('<span>&nbsp;</span>');
+								$item.removeClass('selected');
 							});
+							_range = null;
 						}
 					});
 				});
@@ -270,11 +276,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>activeCls</td>
-							<td>'active'</td>
-							<td>选中的class</td>
-						</tr>
 						<tr>
 							<td>disabledCls</td>
 							<td>'disabled'</td>
