--- a/jquery-tableselect/index.html
+++ b/jquery-tableselect/index.html
@@ -137,7 +137,7 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td class="th"><span>13:00-14:00</span></td>
+							<td class="th disabled"><span>13:00-14:00</span></td>
 							<td></td>
 							<td></td>
 							<td><span>内容测试</span></td>
