--- a/jquery-tablesort/index.html
+++ b/jquery-tablesort/index.html
@@ -148,7 +148,7 @@
 			<div class="example">
 				<div class="call">
 					<h1>调用方法：</h1>
-					<p>$(selector).tabs(options,callback(api));</p>
+					<p>$(selector).tablesort(options,callback(api));</p>
 				</div>
 				<h2>options参数</h2>
 				<table>
