--- a/jquery-accordion/index.html
+++ b/jquery-accordion/index.html
@@ -69,6 +69,7 @@
 				$('.accordion').accordion({triggerType:'click',animate:true,duration:300});
 			</script>
 		</div>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
