--- a/jquery-slider/subject.html
+++ b/jquery-slider/subject.html
@@ -61,11 +61,11 @@
 				font-size:28px;
 			}
 			.slider .active .tag1{
-				-webkit-animation: Xminus40 1000ms ease 500ms both; 
-				-moz-animation: Xminus40 1000ms ease 500ms both; 
-				-ms-animation: Xminus40 1000ms ease 500ms both; 
-				-o-animation: Xminus40 1000ms ease 500ms both; 
-				animation: Xminus40 1000ms ease 500ms both; 
+				-webkit-animation: Xminus40 1000ms ease 500ms both;
+				-moz-animation: Xminus40 1000ms ease 500ms both;
+				-ms-animation: Xminus40 1000ms ease 500ms both;
+				-o-animation: Xminus40 1000ms ease 500ms both;
+				animation: Xminus40 1000ms ease 500ms both;
 			}
 			@-webkit-keyframes Xminus40{
 	0%{
@@ -164,15 +164,16 @@
 					onChangeEnd:function(status){
 						$pages.eq(status.index).addClass('active').siblings().removeClass('active');
 					}
-				});			
+				});
 			})();
 		</script>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
 			  var hm = document.createElement("script");
 			  hm.src = "https://hm.baidu.com/hm.js?134d31aed1aec463afbaa9e0bec45001";
-			  var s = document.getElementsByTagName("script")[0]; 
+			  var s = document.getElementsByTagName("script")[0];
 			  s.parentNode.insertBefore(hm, s);
 			})();
 		</script>
