--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -190,6 +190,7 @@ $('.calendar3').calendar({
 				</table>
 			</div>
 		</div>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
