--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -309,6 +309,7 @@ $('#demo2').citys({
                 </table>
             </div>
         </div>
+        <script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
         <script>
             var _hmt = _hmt || [];
             (function() {
