--- a/jquery-dialog/index.html
+++ b/jquery-dialog/index.html
@@ -213,6 +213,7 @@
 				</table>
 			</div>
 		</div>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
