--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -146,6 +146,7 @@ $('#zoom li').imagezoom({
 				</table>
 			</div>
 		</div>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
