--- a/jquery-range/index.html
+++ b/jquery-range/index.html
@@ -193,6 +193,7 @@ $('#range2').range({
 				</table>
 			</div>
 		</div>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
