--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -237,6 +237,7 @@ $('.search input[type="text"]').suggestion({
 				</table>
 			</div>
 		</div>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
