--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -293,6 +293,7 @@
 				</table>
 			</div>
 		</div>
+		<script type="text/javascript" src="https://passer-by.com/public/script/projects.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
