--- a/index.html
+++ b/index.html
@@ -264,6 +264,12 @@
 							</li>
 							<li>
 								<div class="item">
+									<p><a href="/jquery-tablefixed/" target="_blank">表格浮动表头</a></p>
+									<p>$(selector).tablefixed(options);</p>
+								</div>
+							</li>
+							<li>
+								<div class="item">
 									<p><a href="/jquery-tableselect/" target="_blank">表格单元格操作</a></p>
 									<p>$(selector).tableselect(options,callback(api));</p>
 								</div>
