--- a/jquery-headroom/index.html
+++ b/jquery-headroom/index.html
@@ -95,6 +95,11 @@
 							<td>隐藏展示动画的时间间隔</td>
 						</tr>
 						<tr>
+							<td>autoFixed</td>
+							<td>true</td>
+							<td>是否自动浮动</td>
+						</tr>
+						<tr>
 							<td>autoHide</td>
 							<td>true</td>
 							<td>是否自动隐藏</td>
